# haskell-timecard

./: .codeclimate.yml  Entry.hs  EntryIO.hs  EntryLog.hs  LICENSE  Main.hs  Makefile  README.markdown  Summary.hs  punch.cabal
src/: Entry.hs  EntryIO.hs  Summary.hs
