name:                punch
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/wfleming/punch#readme
license:             BSD3
license-file:        LICENSE
author:              Will Fleming
maintainer:          will@flemi.ng
copyright:           Copyright: (c) 2016 Will Fleming
category:            utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Entry
                     , EntryIO
                     , EntryLog
                     , Summary
  build-depends:       base >= 4.7 && < 5
                     , time
  default-language:    Haskell2010

executable punch
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -Odph
  build-depends:       base
                     , containers
                     , punch
  default-language:    Haskell2010

test-suite punch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , punch
                     , hspec >= 2.0.0
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wfleming/haskell-timecard
